# sonix-toolkit

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
sonix-toolkit/: CMakeLists.txt  sonix-toolkit.cpp  sonix-toolkit.h  supported_devices.h
